tests/machine/x/hs/exists_builtin.error

/workspace/mochi/tests/machine/x/hs/exists_builtin.hs:99:6: error:
    parse error on input ‘=’
   |
99 | data = [1, 2]
   |      ^


Context around line 99:
   97| 
   98| 
   99| data = [1, 2]
  100| 
  101| flag = exists [x | x <- filter (\x -> (x == 1)) data]
